spring boot 3.1.12 upgrade
Issue-ID: AAI-4204
Change-Id: Id716e050643d93b8ed645f2b0d2521cd82792216
Signed-off-by: tushar.mohanty@t-systems.com <tushar.mohanty@t-systems.com>